gcc/testsuite/sarif-replay.dg/malformed-json/empty.sarif
/* Empty file (apart from these comments).  */
/* { dg-error "expected a JSON value but got EOF" "" { target *-*-* } 3 } */
